new subscription panels

--- a/_includes/footer-splash.html
+++ b/_includes/footer-splash.html
@@ -23,6 +23,8 @@
 
 <br>
 <br>
+<p style="font-size: 14px; color: #aaa;"><b><a href="/contact/">contact</a> - <a href="/blog/">blog</a></b></p>
+
 
       </div>
 
