--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -31,7 +31,7 @@
 </div> -->
 
 
-<div id="rates" class="col-lg-12" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
+<!-- <div id="rates" class="col-lg-12" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
   <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-b.png" alt="value" width="80%">
@@ -40,9 +40,9 @@
   <div class="col-lg-6">
     <img class ="hidden-sm hidden-xs hidden-md" style="position: relative;" src="/img/rates/rates-content-L-b.png" alt="value" width="80%">
     <img class ="hidden-lg hidden-xl" style="position: relative;" src="/img/rates/rates-content-L-b.png" alt="value" width="100%">
-      <a class="btn btn-skin hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 4%; left: 29%;" href="/subscriptions/free/">Start</a>
+      <a class="btn btn-skin hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 4%; left: 29%;" href="/">Start</a>
       <a class="btn btn-skin hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 4%; right: 28%;" href="/subscriptions/basic/">Start</a>
-      <a class="btn btn-skin  hidden-lg hidden-xl" style="position: absolute; bottom: 0%; left: 20%;" href="/subscriptions/free/">Start</a>
+      <a class="btn btn-skin  hidden-lg hidden-xl" style="position: absolute; bottom: 0%; left: 20%;" href="/">Start</a>
       <a class="btn btn-skin hidden-lg hidden-xl" style="position: absolute; bottom: 0%; right: 20%;" href="/subscriptions/basic/">Start</a>
   </div>
   <div class="col-lg-6">
@@ -51,6 +51,42 @@
     <a class="btn btn-skin hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 4%; left: 28%;" href="/subscriptions/value/">Start</a>
     <a class="btn btn-skin hidden-lg hidden-xl" style="position: absolute; bottom: 0%; right: 20%;" width="50%" href="/subscriptions/pro/">Start</a>
     <a class="btn btn-skin hidden-lg hidden-xl" style="position: absolute; bottom: 0%; left: 20%;" href="/subscriptions/value/">Start</a>
+  </div>
+
+</div> -->
+
+
+
+
+<div id="rates" class="row" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
+  background-attachment: fixed;">
+
+  <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-b.png" alt="value" width="80%">
+  <img class="hidden-lg hidden-xl" src="/img/rates/phone-rates-header-b.png" alt="value" width="70%">
+  <br>
+
+  <div class="col-xs-6 col-md-3">
+    <img  style="position: relative;" src="/img/rates/rates-panel-free-big.png" alt="value" width="80%">
+    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="/">Start</a>
+    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/">Start</a>
+  </div>
+
+  <div class="col-xs-6 col-md-3">
+    <img style="position: relative;" src="/img/rates/rates-panel-basic-big.png" alt="value" width="80%">
+    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="/subscriptions/basic/">Start</a>
+    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/subscriptions/basic/">Start</a>
+  </div>
+
+  <div class="col-xs-6 col-md-3">
+    <img  style="position: relative;" src="/img/rates/rates-panel-value-big.png" alt="value" width="80%">
+    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="/subscriptions/value/">Start</a>
+    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/subscriptions/value/">Start</a>
+  </div>
+
+  <div class="col-xs-6 col-md-3">
+    <img style="position: relative;" src="/img/rates/rates-panel-pro-big.png" alt="value" width="80%">
+    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="/subscriptions/pro/">Start</a>
+    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/subscriptions/pro/">Start</a>
   </div>
 
 </div>
