--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -14,7 +14,7 @@
             - 
             <br>
             <br> -->
-            <p>
+            <p style="font-size: 120%;">
 
             <i>"Keenan was <b>extremely prompt and professional</b> and made me feel like my project was #1 on his agenda! <b>Very satisfied</b> with Get Mastered and will be using them from now on!"</i> - Alex Ward
             <br>
