--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
 </h4>
 
 <p style="color: #999; font-size: 15px; padding-top: 5px;">
-Get Mastered is a professional mastering and audio restoration service at a price artists can actually afford - 
+Get Mastered is an affordable audio mastering service with feedback to help you grow your production skills - 
 
 <span><a href="/about/What-Is-Get-Mastered/" style="color: #aaa;">Learn more.</a><br><br></p>
 
@@ -23,22 +23,11 @@ My name is Keenan and I've been mastering, mixing, and recording music for six y
 <h4 style="color: #777; display: inline; text-transform: uppercase;">
     Want a free master?
 </h4>
-<p> <a style="font-size: 15px;" target="_blank" href="/">Connect with your personal engineer, right now</a></p>
+<p> <a style="font-size: 15px;" target="_blank" href="/">Connect with your engineer right now</a></p>
 
 <br>
 
-<h4 style="color: #777; display: inline; text-transform: uppercase;">
-    Get Social
-</h4>
 
-<br>
-<a target="_blank" href="http://www.facebook.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-FB.png" width="40px" height="40px"> </a>
-
-<a target="_blank" href="http://www.soundcloud.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-SC.png" width="40px" height="40px"> </a>
-
-<a target="_blank" href="http://www.twitter.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-Twit.png" width="40px" height="40px"> </a>
-<br>
-<br>
 
 
 
@@ -62,6 +51,21 @@ My name is Keenan and I've been mastering, mixing, and recording music for six y
  		<!-- <label style="font-size: 17px;" for="query">Search:  </label> --> 
               <input style="font-size: 13px;" type="text" name="query" placeholder="Or search a term">
             </form>
+
+            <br>
+
+            <h4 style="color: #777; display: inline; text-transform: uppercase;">
+    Get Social
+</h4>
+
+<br>
+<a target="_blank" href="http://www.facebook.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-FB.png" width="30px" height="30px"> </a>
+
+<a target="_blank" href="http://www.soundcloud.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-SC.png" width="30px" height="30px"> </a>
+
+<a target="_blank" href="http://www.twitter.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-Twit.png" width="30px" height="30px"> </a>
+<br>
+<br>
 
 <!-- <p style="color: #000;"> <a style="font-size: 15px; color:#999;" href="/archive/index.html">Full Archive</a></p> -->
 
