--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -1,64 +1,8 @@
-<!-- 
-           <div id="rates" class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker.png) no-repeat center center;   background-size: cover; 
-  background-attachment: fixed;">
-                      <div class="row-fluid">
-
-            <img class="hidden-sm hidden-xs hidden-md" src="/img/amazing-value.png" alt="value" width="100%">
-
-            <img class="hidden-lg hidden-xl" src="/img/amazing-value.png" alt="value" width="100%">
-</div>
-</div>
-<div class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker.png) no-repeat center center;   background-size: cover; 
-  background-attachment: fixed;">
-                      <div class="row-fluid">
-
-            <img class="hidden-sm hidden-xs hidden-md" src="/img/affordable-prices.png" alt="pricing" width="100%">
-
-            <img class="hidden-lg hidden-xl" src="/img/affordable-prices.png" alt="pricing" width="100%">
-            <div class="hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 10%; left: 14%;">
-            <a href="/" class="btn btn-skin pull-left">Select</a>
-          </div>
-          <div class="hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 10%; left: 46%;">
-            <a href="/submit/mastering/" class="btn btn-skin">Select</a>
-            </div>
-            <div class="hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 10%; right: 14%;">
-            <a href="/submit/stem-mastering" class="btn btn-skin pull-right" style="margin-right: 13%;">Select</a>
-            </div>
 
 
 
-</div>
-</div> -->
-
-
-<!-- <div id="rates" class="col-lg-12" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
-  background-attachment: fixed;">
-
-  <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-b.png" alt="value" width="80%">
-  <img class="hidden-lg hidden-xl" src="/img/rates/phone-rates-header-b.png" alt="value" width="70%">
-
-  <div class="col-lg-6">
-    <img class ="hidden-sm hidden-xs hidden-md" style="position: relative;" src="/img/rates/rates-content-L-b.png" alt="value" width="80%">
-    <img class ="hidden-lg hidden-xl" style="position: relative;" src="/img/rates/rates-content-L-b.png" alt="value" width="100%">
-      <a class="btn btn-skin hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 4%; left: 29%;" href="/">Start</a>
-      <a class="btn btn-skin hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 4%; right: 28%;" href="/subscriptions/basic/">Start</a>
-      <a class="btn btn-skin  hidden-lg hidden-xl" style="position: absolute; bottom: 0%; left: 20%;" href="/">Start</a>
-      <a class="btn btn-skin hidden-lg hidden-xl" style="position: absolute; bottom: 0%; right: 20%;" href="/subscriptions/basic/">Start</a>
-  </div>
-  <div class="col-lg-6">
-    <img class ="hidden-sm hidden-xs hidden-md" style="position: relative;" src="/img/rates/rates-content-R-b.png" alt="value" width="80%">
-    <img class ="hidden-lg hidden-xl" style="position: relative;" src="/img/rates/rates-content-R-b.png" alt="value" width="100%">    <a class="btn btn-skin hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 4%; right: 29%;" href="/subscriptions/pro/">Start</a>
-    <a class="btn btn-skin hidden-sm hidden-xs hidden-md" style="position: absolute; bottom: 4%; left: 28%;" href="/subscriptions/value/">Start</a>
-    <a class="btn btn-skin hidden-lg hidden-xl" style="position: absolute; bottom: 0%; right: 20%;" width="50%" href="/subscriptions/pro/">Start</a>
-    <a class="btn btn-skin hidden-lg hidden-xl" style="position: absolute; bottom: 0%; left: 20%;" href="/subscriptions/value/">Start</a>
-  </div>
-
-</div> -->
-
-
-
-
-<div id="rates" class="row" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
+<div id="rates" class="page-scroll col-lg-12">
+<div class="row" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
   <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-b.png" alt="value" width="80%">
@@ -67,8 +11,8 @@
 
   <div class="col-xs-6 col-md-3">
     <img  style="position: relative;" src="/img/rates/rates-panel-free-big.png" alt="value" width="80%">
-    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="/">Start</a>
-    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/">Start</a>
+    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="#free">Start</a>
+    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="#free">Start</a>
   </div>
 
   <div class="col-xs-6 col-md-3">
@@ -89,4 +33,5 @@
     <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/subscriptions/pro/">Start</a>
   </div>
 
+</div>
 </div>
