--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,7 +54,7 @@ My name is Keenan and I've been mastering, mixing, and recording music for six y
 
             <br>
 
-            <h4 style="color: #777; display: inline; text-transform: uppercase;">
+            <!-- <h4 style="color: #777; display: inline; text-transform: uppercase;">
     Get Social
 </h4>
 
@@ -65,7 +65,7 @@ My name is Keenan and I've been mastering, mixing, and recording music for six y
 
 <a target="_blank" href="http://www.twitter.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-Twit.png" width="30px" height="30px"> </a>
 <br>
-<br>
+<br> -->
 
 <!-- <p style="color: #000;"> <a style="font-size: 15px; color:#999;" href="/archive/index.html">Full Archive</a></p> -->
 
