--- a/_includes/social-media.html
+++ b/_includes/social-media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<p><i>Enjoy this post? Please help me out by commenting, telling a friend, or sharing with one of these buttons</i></p>
+<p>-Keenan <i>(founder, engineer, and voice behind most of the blog posts)</i></p>
 
-	<a href="https://twitter.com/share" class="twitter-share-button" data-size="small" data-count="none" data-hashtags="GetMastered">Tweet</a>
+	<a href="https://twitter.com/share" class="twitter-share-button" data-size="small" data-count="none" data-hashtags="GetMastered" >Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 	<div class="fb-share-button" data-href="http://getmastered.com{{ page.url }}" data-layout="button" style="padding: 0px 15px 0px 15px;">
