subscriptions beautified, FAQ added

--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -5,34 +5,33 @@
 <div class="row" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
-  <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-b.png" alt="value" width="80%">
-  <img class="hidden-lg hidden-xl" src="/img/rates/phone-rates-header-b.png" alt="value" width="70%">
+  <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-full.png" alt="value" width="80%">
+  <img class="hidden-lg hidden-xl" src="/img/rates/rates-header-phone.png" alt="value" width="70%">
   <br>
   <br>
 
-  <div class="col-xs-6 col-md-3">
-    <img  style="position: relative;" src="/img/rates/rates-panel-free-big.png" alt="value" width="80%">
-    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="#free">Start</a>
-    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="#free">Start</a>
+  <div class="col-md-3 col-xs-6" style="padding: 1% 3%; position: relative;">
+    <img src="/img/rates/rates-panel-free.png" alt="value" width="100%">
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="#free">Start</a>
   </div>
 
-  <div class="col-xs-6 col-md-3">
-    <img style="position: relative;" src="/img/rates/rates-panel-basic-big.png" alt="value" width="80%">
-    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="/subscriptions/basic/">Start</a>
-    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/subscriptions/basic/">Start</a>
+  <div class="col-md-3 col-xs-6" style="padding: 1% 3%; position: relative;">
+    <img src="/img/rates/rates-panel-basic.png" alt="value" width="100%">
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/basic/">Start</a>
   </div>
 
-  <div class="col-xs-6 col-md-3">
-    <img  style="position: relative;" src="/img/rates/rates-panel-value-big.png" alt="value" width="80%">
-    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="/subscriptions/value/">Start</a>
-    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/subscriptions/value/">Start</a>
+  <div class="col-md-3 col-xs-6" style="padding: 1% 3%; position: relative;">
+    <img src="/img/rates/rates-panel-value.png" alt="value" width="100%">
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/value/">Start</a>
   </div>
 
-  <div class="col-xs-6 col-md-3">
-    <img style="position: relative;" src="/img/rates/rates-panel-pro-big.png" alt="value" width="80%">
-    <a class="btn btn-skin hidden-sm hidden-xs" style="position: absolute; bottom: 3%; left: 43%;" href="/subscriptions/pro/">Start</a>
-    <a class="btn btn-skin hidden-md hidden-xl hidden-lg" style="position: absolute; bottom: 1%; left: 37%; padding: 1%;" href="/subscriptions/pro/">Start</a>
+  <div class="col-md-3 col-xs-6" style="padding: 1% 3%; position: relative;">
+    <img src="/img/rates/rates-panel-pro.png" alt="value" width="100%">
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/pro/">Start</a>
   </div>
 
 </div>
+
+
+
 </div>
