--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -51,7 +51,7 @@
     <div class="row">
       <p style="font-size: 14px;">
         <br>
-        Just plain unhappy with how your mix sounds? <b>Stem mastering is the closest you can get to actually giving your mastering engineer the reins to your project.</b> With stem mastering, you send us separate groups of tracks, bounced together on one audio file (called a stem). We then mix those stems, and master the result. For example, if you recorded a full drum kit, three guitars, and 3 vocal tracks, you could send us one stem with all the drum tracks, one stem with all the guitar tracks, and one stem with all the vocal tracks, each mixed to your liking. Due to the time-intensive nature of this work, stem mastering is one of our more expensive services. But for those times when you are banging your ears against a wall, stem mastering is a perfect solution.
+        Just plain unhappy with how your mix sounds? <b>Stem mastering is the closest you can get to actually giving your mastering engineer the reins to your project.</b> With stem mastering, you send us separate groups of tracks, bounced together on one audio file (called a stem). We then mix those stems, and master the result. For example, if you recorded a full drum kit, three guitars, and three vocal tracks, you could send us one stem with all the drum tracks, one stem with all the guitar tracks, and one stem with all the vocal tracks, each mixed to your liking. For those times when you are banging your ears against a wall, stem mastering is a perfect solution.
 
       </p>
     </div>
