--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -66,10 +66,17 @@
             <br>  
 
             <i><b>"Loved it!</b> Quick, friendly service and very good results."</i> - Rob Sommerlad‎ 
-            <br>
+            
             <a href="https://www.facebook.com/getmastered/posts/1748983295324815?ref=notif&notif_t=page_wall">[source]</a>
             <br>
-            <br>      
+            <br>
+
+
+            <i>"I absolutely love my finished product from Get Mastered, and I'll be back for work again soon! <b>Thanks for making my music sound better than ever!</b>"</i> - Richard Lathrop
+            
+            <a href="https://www.facebook.com/getmastered/posts/1755223604700784?notif_t=page_wall">[source]</a>
+            <br>
+            <br>
 
 
       </p>
