--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -1,34 +1,82 @@
 
 
 
-<div id="rates" class="page-scroll col-lg-12">
+<div id="memberships" class="page-scroll col-lg-12">
 <div class="row" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
-  <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-full.png" alt="value" width="80%">
+<!--   <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-full.png" alt="value" width="80%">
   <img class="hidden-lg hidden-xl" src="/img/rates/rates-header-phone.png" alt="value" width="70%">
   <br>
-  <br>
+  <br> -->
+   <div class="col-md-5 col-xs-12 bg-white hidden-md hidden-lg hidden-xl" style="padding: 2% 4%; margin: 0% 0% 2% 2%;">
+  <h1>Mix Feedback</h1>
 
-  <div class="col-md-3 col-xs-6" style="padding: 1% 3%; position: relative;">
-    <img src="/img/rates/rates-panel-free.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="#free">Start</a>
+  <p style="font-size: 14px;">
+
+    Do you want your mastering engineer with you every step of the way? Mix Feedback gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
+    <br>
+    <br>
+    Mix Feedback goes a little something like this: you send us a mix, and we send you exactly what we would do to fix any issues you might be unhappy with. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
+    <br>
+    <br>
+     In addition to your monthly Mix Feedbacks, we give our members complimentary Mix Feedback for anything you have your engineer master. Examples of mix feedback are coming to our website soon.
   </div>
 
-  <div class="col-md-3 col-xs-6" style="padding: 1% 3%; position: relative;">
+   <div class="col-md-1 col-xs-2">
+   </div>
+
+
+
+   <div class="col-md-5 col-xs-8" style="padding: 0%; position: relative;">
+
+  <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
+    <img src="/img/rates/rates-panel-budget.png" alt="value" width="100%">
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
+  </div>
+
+<!--   <div class="col-xs-3" style="padding: 1% 2%; position: relative;">
     <img src="/img/rates/rates-panel-basic.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/basic/">Start</a>
-  </div>
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
+  </div> -->
 
-  <div class="col-md-3 col-xs-6" style="padding: 1% 3%; position: relative;">
+  <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
     <img src="/img/rates/rates-panel-value.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/value/">Start</a>
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
   </div>
 
-  <div class="col-md-3 col-xs-6" style="padding: 1% 3%; position: relative;">
+  <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
     <img src="/img/rates/rates-panel-pro.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/pro/">Start</a>
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
   </div>
+
+  </div>
+
+<!--  <div class="col-xs-2">
+ </div>
+  <div class="col-xs-2">
+ </div> -->
+
+ <div class="col-md-5 col-xs-12 bg-white hidden-xs hidden-sm" style="padding: 2% 4%; margin: 0% 0% 2% 2%;">
+  <h1>Mix Feedback</h1>
+
+  <p style="font-size: 14px;">
+
+    Do you want your mastering engineer with you every step of the way? Mix Feedback gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
+    <br>
+    <br>
+    Mix Feedback goes a little something like this: you send us a mix, and we send you exactly what we would do to fix any issues you might be unhappy with. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
+    <br>
+    <br>
+     In addition to your monthly Mix Feedbacks, we give our members complimentary Mix Feedback anything you have your engineer master. Examples of mix feedback are coming to our website soon.
+  </div>
+
+
+
+
+ <div class="col-md-1">
+   </div>
+
 
 </div>
 
