--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -3,77 +3,115 @@
 <div id="faq" class="col-lg-12 bg-white" style="padding-top: 50px;">
   <div class="row">
   <h2>Frequently Asked Questions</h2>
+<!-- 
 
+<div class="col-md-3" style="padding: 3%;">
+      <div class="row">
+      <p style="font-size: 18px;">
+        <b>Do I have to subscribe to get mastered?</b>
+      </p>
+      <img src="/img/icons/money-icon.png">
+      </div>
 
-    <div class="col-md-3" style="padding: 2%; margin 10%;">
+      <div class="row">
+      <p style="font-size: 14px;">
+        <br>
+        Of course not! Under our free tier, you'll see we do masters for $39/song without a subscription. Just send your mix to your mastering engineer, and you're off. However, if you are an artist that regularly releases music, whether monthly, bi-monthly, or once a year, our subscription plans can save you quite a pretty penny. <b>Masters and mix feedbacks from your subscription roll over month-to-month</b>, and if you upgrade your plan you'll keep all your credits as well. Even if you only release one twelve song album a year, you can save $336 off of our free-tier prices by saving up free masters and mix-feedback on our value plan. And of course you can cancel or switch engineers at any time. 
+      </p>
+      </div>
+    </div> -->
+
+    <div class="col-md-3" style="padding: 3%;">
       <div class="row">
       <p style="font-size: 18px;">
         <b>What is mastering?</b>
       </p>
-      <img src="/img/icons/master-icon.png">
+      <img src="/img/icons/master-icon.png" width="80%">
       </div>
 
       <div class="row">
       <p style="font-size: 14px;">
         <br>
-        To many, mastering is simply adding volume to a track. Not to us! Our engineers understand mastering to be a truly vital "second opinion" of an audio work. In addition to adding volume and making sure your tracks are ready for release, <b>our engineers take pride in enhancing the sonic quality of a work while retaining its original vision and fundamental spirit.</b> Plus, we offer revisions to make sure you are fully satisfied with your master, and masters for our subscribers <i>do</i> roll over month to month. Get Mastered engineers <i>work with you</i> to give you studio-grade masters at refreshing, fair prices.
+        To many, mastering is simply adding volume to a track. Not to us! <b>Our engineers take pride in working with you to make the best music possible.</b>  We get to know your tastes, and enhance your song to have the tone, style, and quality of the music you love. Plus, we offer revisions to make sure you are fully satisfied with your master. Get Mastered engineers <i>work with you</i> to give you studio-grade masters at refreshing, fair prices.
         <br>
-        <a href="/examples/">Listen yourself to some of our previous work here!</a>
+        <a href="/examples/">Listen yourself to some of our previous work from happy customers!</a>
       </p>
       </div>
     </div>
 
-    <div class="col-md-3" style="padding: 2%; margin 10%;">
+    <div class="col-md-3" style="padding: 3%;">
       <div class="row">
       <p style="font-size: 18px;">
         <b>What is mix feedback?</b>
       </p>
-      <img src="/img/icons/mix-icon.png">
+      <img src="/img/icons/mix-icon.png" width="80%">
     </div>
 
     <div class="row">
       <p style="font-size: 14px;">
         <br>
-        Of course, creating the perfect track doesn't start at the mastering level; some mix decisions can make or break a great song. We know our customers want to learn how to mix like the pros, and that is why our mastering engineers offer mix feedback. It is our strong held belief that <b>there is nothing more vital to growth than receiving feedback on your work from experienced ears</b>. In fact, we believe this to be such a vital step to personal growth that we hold weekly feedback sessions in-house for our own engineers to critique the masters we work on (and of course our own musical projects!)
+        Of course, creating the perfect track doesn't start at the mastering level. We know our customers want to learn how to mix and record like the pros, and that is why we offer mix feedback. Regardless of your skill level as a producer, <b>there is nothing more vital to growth than receiving feedback on your work from experienced ears</b>. We include mix feedback with your first free master to give you an idea of what you can expect (some examples of mix feedback are coming soon). <a href="#memberships">Join Get Mastered as a member today to start receiving mix feedback throughout your recording process.</a>
 
       </p>
     </div>
   </div>
 
-    <div class="col-md-3" style="padding: 2%; margin 10%;">
+    <div class="col-md-3" style="padding: 3%;">
       <div class="row">
       <p style="font-size: 18px;">
         <b>What is stem mastering?</b>
       </p>
-      <img src="/img/icons/stem-icon.png">
+      <img src="/img/icons/stem-icon.png" width="80%">
     </div>
 
     <div class="row">
       <p style="font-size: 14px;">
         <br>
-        Just plain unhappy with how your mix sounds? <b>Stem mastering is the closest you can get to actually giving your mastering engineer the reins to your project.</b> With stem mastering, you send us separate groups of tracks, bounced together on one audio file (called a stem). We then mix those stems, and master the result. For example, if you recorded a full drum kit, three guitars, and three vocal tracks, you could send us one stem with all the drum tracks, one stem with all the guitar tracks, and one stem with all the vocal tracks, each mixed to your liking. For those times when you are banging your ears against a wall, stem mastering is a perfect solution.
+        Just plain unhappy with how your mix sounds? <b>Stem mastering is the closest you can get to actually giving your mastering engineer the reins to your project.</b> With stem mastering, you send us separate groups of tracks, bounced together on one audio file (called a stem). We then mix those stems, and master the result. For example, if you recorded a full drum kit, three guitars, and three vocal tracks, you could send us one stem with all the drum tracks, one stem with all the guitar tracks, and one stem with all the vocal tracks, each mixed to your liking. Email your engineer for more information on stem mastering.
 
       </p>
     </div>
   </div>
 
-    <div class="col-md-3" style="padding: 2%; margin 10%;">
+    <div class="col-md-3" style="padding: 3%;">
       <div class="row">
       <p style="font-size: 18px;">
         <b>What about non-musical audio?</b>
       </p>
-      <img src="/img/icons/pod-icon.png">
+      <img src="/img/icons/pod-icon.png" width="80%">
     </div>
         <div class="row">
         <p style="font-size: 14px;">
           <br>
-        Our engineers also have experience with non-musical work, <b>including podcasts and film!</b> Due to the differences in the nature of these works, we have custom rates for podcasts, film, and other audio projects. We do anything and everything audio! <a href="/contact/">Reach out to us with some details about your project</a>, or contact your engineer directly for special rates on non-musical projects.
+        Our engineers also have experience with non-musical work, <b>including podcasts.</b> We do anything and everything audio! Due to the differences in the nature of these works, we have custom rates for non-musical audio projects. <a href="/contact/">Reach out to us with some details about your project</a>, or contact your engineer directly for special rates on non-musical projects.
 
       </p>
     </div>
 
     </div>
+
+<!--     <div class="col-md-3" style="padding: 3%;">
+      <div class="row">
+      <p style="font-size: 18px;">
+        <b>Can I switch engineers?</b>
+      </p>
+      <img src="/img/icons/person-icon.png">
+      </div>
+      <div class="row">
+      <p style="font-size: 14px;">
+        <br>
+        Get Mastered is founded on the importance of a collaborative mastering experience. That is why, though we stand by the quality of the work of our mastering engineers, we understand that all matches aren't made in heaven. If you have any issues at all with your mastering engineer, please send us a message at 
+        <a href="mailto:services@getmastered.com">services@getmastered.com</a> and we will connect you with a new engineer without breaking any feelings!
+      </p>
+      </div>
+    </div> -->
+
+
+
   </div>
+
+  <h4>Have another question? Email your mastering engineer, or email us directly at <a href="mailto:services@getmastered.com">services@getmastered.com</a></h4>
+  <br>
   
 
   </div>
