--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -51,11 +51,12 @@
       <ul class="nav navbar-nav" style="text-align: left; padding-left: 0px;">
         <li><a href="#about">About</a></li>
         <li><a href="#rates">Rates</a></li>
+        <li><a href="#memberships">Memberships</a></li>
         <li><a href="#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
         <li><a href="/login/">Login</a></li>
         <!-- <li><a href="/subscriptions/">Subscribe</a></li> -->
-        <li class="hidden-sm hidden-xs hidden-md"><a href="/submit/mastering/">Submit</a></li>
+       <!--  <li class="hidden-sm hidden-xs hidden-md"><a href="/submit/mastering/">Submit</a></li> -->
         <li class="hidden-lg hidden-xl"><a href="/contact/">Contact</a></li>
         <!-- <li class="hidden-sm hidden-xs hidden-md"><a href="/blog/">Blog</a></li> -->
         <!-- <li class="active"><a href="/blog/">Blog</a></li> -->
