--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -12,7 +12,9 @@
    <div class="col-md-5 col-xs-12 bg-white hidden-md hidden-lg hidden-xl" style="padding: 2% 4%; margin: 0% 0% 2% 2%;">
   <h1>Mix Feedback</h1>
 
-  <p style="font-size: 14px;">
+  <img src="/img/icons/mix-icon.png">
+
+  <p style="font-size: 14px;"><br>
 
     Do you want your mastering engineer with you every step of the way? Mix Feedback gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
     <br>
