--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -9,15 +9,16 @@
 
  <div class="col-md-5 bg-white" style="padding: 2% 4%; margin: 0% 2% 2% 0%;">
  	<h1>Our Mastering Rates</h1>
+ 	<img src="/img/icons/master-icon.png">
 
- 	<p style="font-size: 14px;">
+ 	<p style="font-size: 14px;"><br>
  		In addition to your <a href="#free">first master free</a>, <b>we give our clients another free master for every three paid masters</b>, just for sticking with us. Plus, our affordable rates get you the absolute best value for your dollar.
  		<br>
  		<br>
  		With Get Mastered, you don't just get a master; you get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks louder, your albums cohesive, and your songs ready for commercial release, our engineers take pride in artistically enhancing your track in a way that reflects your style. Your engineer at Get Mastered will get to know your tastes, and get you closer to the sounds and artists you admire.
 		<br>
 		<br>
-		Towards this effort, we also offer Mix Feedback to our subscription members, free with every master. Great music of course starts at the mix level, and becoming a member gives you access to experienced ears during your recording and mixing process. Our engineers strive to bring our members' music and production skills to a professional level, at a price anyone can afford. <a href="/#memberships">Scroll for more about becoming a member</a></p>
+		Towards this effort, we also offer Mix Feedback to our subscription members, free with every master. Great music of course starts at the mix level, and becoming a member gives you access to experienced ears during your recording and mixing process.<a href="/#memberships">Scroll for more about becoming a member</a></p>
  </div>
 
       <div class="col-xs-2">
