--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -9,7 +9,7 @@
   <img class="hidden-lg hidden-xl" src="/img/rates/rates-header-phone.png" alt="value" width="70%">
   <br>
   <br> -->
-   <div class="col-md-5 col-xs-12 bg-white hidden-md hidden-lg hidden-xl" style="padding: 2% 4%; margin: 0% 0% 2% 2%;">
+   <div class="col-md-5 col-xs-12 bg-white hidden-md hidden-lg hidden-xl" style="padding: 5% 0% 0% 0%; margin: 0%;">
   <h1>Mix Feedback</h1>
 
   <img src="/img/icons/mix-icon.png">
@@ -25,12 +25,12 @@
      In addition to your monthly Mix Feedbacks, we give our members complimentary Mix Feedback for anything you have your engineer master. Examples of mix feedback are coming to our website soon.
   </div>
 
-   <div class="col-md-1 col-xs-2">
+   <div class="col-md-1">
    </div>
 
 
 
-   <div class="col-md-5 col-xs-8" style="padding: 0%; position: relative;">
+   <div class="col-md-5 col-xs-12" style="padding: 0%; position: relative;">
 
   <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
     <img src="/img/rates/rates-panel-budget.png" alt="value" width="100%">
