--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -7,7 +7,7 @@
      <div class="col-md-1">
  </div>
 
- <div class="col-md-5 bg-white" style="padding: 2% 4%; margin: 0% 2% 2% 0%;">
+ <div class="col-md-5 bg-white" style="padding: 2% 4%; margin: 0% 0% 2% 0%;">
  	<h1>Our Mastering Rates</h1>
  	<img src="/img/icons/master-icon.png">
 
@@ -20,25 +20,25 @@
 		<br>
 		Towards this effort, we also offer Mix Feedback to our subscription members, free with every master. Great music of course starts at the mix level, and becoming a member gives you access to experienced ears during your recording and mixing process.<a href="/#memberships">Scroll for more about becoming a member</a></p>
  </div>
-
+<!-- 
       <div class="col-xs-2">
- </div>
+ </div> -->
 
-  <div class="col-md-5 col-xs-8" style="padding: 0%; position: relative;">
+  <div class="col-md-5 col-xs-12" style="padding: 0%; position: relative;">
 
   	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-single.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/submit/mastering/">Submit now</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Submit</a>
 	</div>
 
 	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-ep.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/submit/mastering/">Submit now</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Submit</a>
 	</div>
 
 	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-album.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/submit/mastering/">Submit now</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Submit</a>
 	</div>
 
 
