--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -1,6 +1,6 @@
 
 
-<div id="faq" class="col-lg-12 bg-white" style="padding-top: 50px;">
+<div id="faq" class="col-lg-12 bg-white hidden-sm hidden-xs" style="padding-top: 50px;">
   <div class="row">
   <h2>Frequently Asked Questions</h2>
 <!-- 
@@ -21,6 +21,7 @@
       </div>
     </div> -->
 
+
     <div class="col-md-3" style="padding: 3%;">
       <div class="row">
       <p style="font-size: 18px;">
@@ -38,6 +39,7 @@
       </p>
       </div>
     </div>
+
 
     <div class="col-md-3" style="padding: 3%;">
       <div class="row">
@@ -87,6 +89,7 @@
 
       </p>
     </div>
+
 
     </div>
 
