--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -18,27 +18,27 @@
  		With Get Mastered, you don't just get a master; you get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks louder, your albums cohesive, and your songs ready for commercial release, our engineers take pride in artistically enhancing your track in a way that reflects your style. Your engineer at Get Mastered will get to know your tastes, and get you closer to the sounds and artists you admire.
 		<br>
 		<br>
-		Towards this effort, we also offer Mix Feedback to our subscription members, free with every master. Great music of course starts at the mix level, and becoming a member gives you access to experienced ears during your recording and mixing process.<a href="/#memberships">Scroll for more about becoming a member</a></p>
+		<!-- Towards this effort, we also offer Mix Feedback to our subscription members, free with every master. Great music of course starts at the mix level, and becoming a member gives you access to experienced ears during your recording and mixing process.<a href="/#memberships">Scroll for more about becoming a member</a> --></p>
  </div>
 <!-- 
       <div class="col-xs-2">
  </div> -->
 
-  <div class="col-md-5 col-xs-12" style="padding: 0%; position: relative;">
+  <div class="col-md-5 col-xs-12" style="padding: 0% 2%; position: relative;">
 
   	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-single.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Submit</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Start</a>
 	</div>
 
 	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-ep.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Submit</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Start</a>
 	</div>
 
 	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-album.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Submit</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Start</a>
 	</div>
 
 
