new payment stuff

--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -52,7 +52,7 @@
     <div class="row">
       <p style="font-size: 14px;">
         <br>
-        Of course, creating the perfect track doesn't start at the mastering level. We know our customers want to learn how to mix and record like the pros, and that is why we offer mix feedback. Regardless of your skill level as a producer, <b>there is nothing more vital to growth than receiving feedback on your work from experienced ears</b>. We include mix feedback with your first free master to give you an idea of what you can expect (mix feedback is coming soon). <!-- <a href="#memberships">Join Get Mastered as a member today to start receiving mix feedback throughout your recording process.</a> -->
+        Of course, creating the perfect track doesn't start at the mastering level. We know our customers want to learn how to mix and record like the pros, and that is why we offer mix feedback. Regardless of your skill level as a producer, <b>there is nothing more vital to growth than receiving feedback on your work from experienced ears</b>. We include mix feedback with your first free master to give you an idea of what you can expect. <!-- <a href="#memberships">Join Get Mastered as a member today to start receiving mix feedback throughout your recording process.</a> -->
 
       </p>
     </div>
