--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -1,17 +1,17 @@
 
 
-<div id="rates" class="page-scroll col-lg-12">
-<div class="row" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
+<div id="rates" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
+<div class="row" >
 
      <div class="col-md-1">
  </div>
 
- <div class="col-md-5 bg-white" style="padding: 2% 4%; margin: 0% 0% 2% 0%;">
- 	<h1>Our Mastering Rates</h1>
- 	<img src="/img/icons/master-icon.png">
+ <div class="col-md-5" style="padding: 2% 4%; margin: 0% 0% 2% 0%;">
+ 	<h1 style="margin-bottom: 5px;">Our Mastering Rates</h1>
+ 	<!-- <img src="/img/icons/master-icon.png"> -->
 
- 	<p style="font-size: 14px;"><br>
+ 	<p style="font-size: 16px;"><br>
  		In addition to your <a href="#free">first master free</a>, <b>we give our clients another free master for every three paid masters</b>, just for sticking with us. Plus, our affordable rates get you the absolute best value for your dollar.
  		<br>
  		<br>
@@ -28,17 +28,17 @@
 
   	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-single.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Start</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/payment/">Choose</a>
 	</div>
 
 	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-ep.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Start</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/payment/">Choose</a>
 	</div>
 
 	<div class="col-xs-4" style="padding: 0% 4%; position: relative;">
 		<img src="/img/rates/rates-album.png" width="100%">
-		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/submit/mastering/">Start</a>
+		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 14px; padding-top: 10px;" href="/payment/">Choose</a>
 	</div>
 
 
