--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -78,6 +78,12 @@
             <br>
             <br>
 
+            <i>Get Mastered is a truly amazing team! My master was delivered quickly and it sounds top notch! I've been able to say how I wanted the song to sound like and the results was beyond my expectations. <b>I didn't think they could make my music sound so professional. Moreover, it's a real pleasure to work with people who really care about their customers!</b>"</i> - Origin-X
+            
+            <a href="https://www.facebook.com/getmastered/posts/1760121437544334?notif_t=page_wall">[source]</a>
+            <br>
+            <br>
+
 
       </p>
         </div>
