--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -1,20 +1,20 @@
 
 
 
-<div id="memberships" class="page-scroll col-lg-12">
-<div class="row" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
+<div id="memberships" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/speaker.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
+<div class="row" >
 
 <!--   <img class="hidden-sm hidden-xs hidden-md" src="/img/rates/rates-header-full.png" alt="value" width="80%">
   <img class="hidden-lg hidden-xl" src="/img/rates/rates-header-phone.png" alt="value" width="70%">
   <br>
   <br> -->
-   <div class="col-md-5 col-xs-12 bg-white hidden-md hidden-lg hidden-xl" style="padding: 5% 0% 0% 0%; margin: 0%;">
-  <h1>Mix Feedback</h1>
+   <div class="col-md-5 col-xs-12 hidden-md hidden-lg hidden-xl" style="padding: 5% 0% 0% 0%; margin: 0%;">
+  <h1 style="color: #fff; margin-bottom: 5px;">Mix Feedback</h1>
 
-  <img src="/img/icons/mix-icon.png">
+ <!--  <img src="/img/icons/mix-icon.png"> -->
 
-  <p style="font-size: 14px;"><br>
+  <p style="font-size: 16px; color: #fff;"><br>
 
     Do you want your mastering engineer with you every step of the way? Mix Feedback gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
     <br>
@@ -34,7 +34,7 @@
 
   <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
     <img src="/img/rates/rates-panel-budget.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/budget/">Start</a>
   </div>
 
 <!--   <div class="col-xs-3" style="padding: 1% 2%; position: relative;">
@@ -44,12 +44,12 @@
 
   <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
     <img src="/img/rates/rates-panel-value.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/value/">Start</a>
   </div>
 
   <div class="col-xs-4" style="padding: 1% 4%; position: relative;">
     <img src="/img/rates/rates-panel-pro.png" alt="value" width="100%">
-    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/">Start</a>
+    <a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/subscriptions/pro/">Start</a>
   </div>
 
   </div>
@@ -59,12 +59,12 @@
   <div class="col-xs-2">
  </div> -->
 
- <div class="col-md-5 col-xs-12 bg-white hidden-xs hidden-sm" style="padding: 2% 4%; margin: 0% 0% 2% 2%;">
-  <h1>Mix Feedback</h1>
+ <div class="col-md-5 col-xs-12 hidden-xs hidden-sm" style="padding: 2% 4%; margin: 0% 0% 2% 2%;">
+  <h1 style="color: #fff; margin-bottom: 5px;">Mix Feedback</h1>
 
-  <img src="/img/icons/mix-icon.png">
+ <!--  <img src="/img/icons/mix-icon.png"> -->
 
-  <p style="font-size: 14px;"><br>
+  <p style="font-size: 16px; color: #fff;"><br>
 
     Do you want your mastering engineer with you every step of the way? Mix Feedback gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
     <br>
