--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -69,7 +69,7 @@
     <div class="row">
       <p style="font-size: 14px;">
         <br>
-        Just plain unhappy with how your mix sounds? <b>Stem mastering is the closest you can get to actually giving your mastering engineer the reins to your project.</b> With stem mastering, you send us separate groups of tracks, bounced together on one audio file (called a stem). We then mix those stems, and master the result. For example, if you recorded a full drum kit, three guitars, and three vocal tracks, you could send us one stem with all the drum tracks, one stem with all the guitar tracks, and one stem with all the vocal tracks, each mixed to your liking. Email your engineer for more information on stem mastering.
+        Just plain unhappy with how your mix sounds? <b>Stem mastering is the closest you can get to actually giving your mastering engineer the reins to your project.</b> With stem mastering, you send us separate groups of tracks, bounced together on one audio file (called a stem). We then mix those stems, and master the result. For example, if you recorded a full drum kit, three guitars, and three vocal tracks, you could send us one stem with all the drum tracks, one stem with all the guitar tracks, and one stem with all the vocal tracks, each mixed to your liking. Email your engineer for more information on stem mastering. (Stem mastering is coming soon!)
 
       </p>
     </div>
