--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -11,7 +11,7 @@
  	<h1 style="margin-bottom: 5px;">Our Mastering Rates</h1>
  	<!-- <img src="/img/icons/master-icon.png"> -->
 
- 	<p style="font-size: 16px;"><br>
+ 	<p style="font-size: 16px; color: #000;"><br>
  		In addition to your <a href="#free">first master free</a>, <b>we give our clients another free master for every three paid masters</b>, just for sticking with us. Plus, our affordable rates get you the absolute best value for your dollar.
  		<br>
  		<br>
