--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -10,13 +10,13 @@
   <br>
   <br> -->
    <div class="col-md-5 col-xs-12 hidden-md hidden-lg hidden-xl" style="padding: 5% 0% 0% 0%; margin: 0%;">
-  <h1 style="color: #fff; margin-bottom: 5px;">Mix Feedback</h1>
+  <h1 style="color: #fff; margin-bottom: 5px;">Our Memberships</h1>
 
  <!--  <img src="/img/icons/mix-icon.png"> -->
 
   <p style="font-size: 16px; color: #fff;"><br>
 
-    Do you want your mastering engineer with you every step of the way? Mix Feedback gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
+    Do you want your mastering engineer with you every step of the way? Mix Feedback, available on any level membership plan, gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
     <br>
     <br>
     Mix Feedback goes a little something like this: you send us a mix, and we send you exactly what we would do to fix any issues you might be unhappy with. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
@@ -60,13 +60,13 @@
  </div> -->
 
  <div class="col-md-5 col-xs-12 hidden-xs hidden-sm" style="padding: 2% 4%; margin: 0% 0% 2% 2%;">
-  <h1 style="color: #fff; margin-bottom: 5px;">Mix Feedback</h1>
+  <h1 style="color: #fff; margin-bottom: 5px;">Our Memberships</h1>
 
  <!--  <img src="/img/icons/mix-icon.png"> -->
 
   <p style="font-size: 16px; color: #fff;"><br>
 
-    Do you want your mastering engineer with you every step of the way? Mix Feedback gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
+    Do you want your mastering engineer with you every step of the way? Mix Feedback, available on any level membership plan, gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
     <br>
     <br>
     Mix Feedback goes a little something like this: you send us a mix, and we send you exactly what we would do to fix any issues you might be unhappy with. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
