--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -18,6 +18,7 @@
  		With Get Mastered, you don't just get a master; you get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks louder, your albums cohesive, and your songs ready for commercial release, our engineers take pride in artistically enhancing your track in a way that reflects your style. Your engineer at Get Mastered will get to know your tastes, and get you closer to the sounds and artists you admire.
 		<br>
 		<br>
+		Our turnaround times are <i>absolute maximums</i>; we often return masters earlier than our listed turnaround times. That being said, we don't rush quality. If you absolutely need a rush job, let your engineer know; we are happy to work with you to the best of our abilities at no extra cost.
 		<!-- Towards this effort, we also offer Mix Feedback to our subscription members, free with every master. Great music of course starts at the mix level, and becoming a member gives you access to experienced ears during your recording and mixing process.<a href="/#memberships">Scroll for more about becoming a member</a> --></p>
  </div>
 <!-- 
