review color change

--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -1,13 +1,13 @@
 
 
-<div id="reviews" class="col-lg-12" style="padding: 5% 15%; margin: 0px; background: url(/img/backgrounds/speaker-w.png) no-repeat center center;   background-size: cover; 
+<div id="reviews" class="col-lg-12 bg-gray" style="padding: 5% 15%; margin: 0px; background: url(/img/backgrounds/speaker-w.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 <div class="row-fluid">
 
 
 
  
-            <h1 style="color: #333; text-shadow: 0px 0px 20px #ccc;">What are people saying about us?</h1>
+            <h1 style="color: #333;">What are people saying about us?</h1>
             <br>
             <!-- <br>
             <br>
@@ -15,7 +15,7 @@
             - 
             <br>
             <br> -->
-            <p style="font-size: 120%; color: #333; font-weight: 300; text-shadow: 0px 0px 20px #ccc;">
+            <p style="font-size: 120%; color: #333; font-weight: 300;">
 
             <i>"Keenan was <b>extremely prompt and professional</b> and made me feel like my project was #1 on his agenda! <b>Very satisfied</b> with Get Mastered and will be using them from now on!"</i> - Alex Ward
             <br>
