--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -33,7 +33,8 @@
       <div class="row">
       <p style="font-size: 14px;">
         <br>
-        To many, mastering is simply adding volume to a track. Not to us! <b>Our engineers take pride in working with you to make the best music possible.</b>  We get to know your tastes, and enhance your song to have the tone, style, and quality of the music you love. Plus, we offer revisions to make sure you are fully satisfied with your master. Get Mastered engineers <i>work with you</i> to give you studio-grade masters at refreshing, fair prices.
+        To many, mastering is simply adding volume to a track. Not to us! <b>Our mission is to make your music sound like the artists and producers you admire</b>, plain and simple. We get to know your tastes, and enhance your song to have the tone, style, volume, cohesion, and quality of the music you love. Plus, we offer revisions free of charge to make sure you are absolutely satisfied with your master.
+        <br>
         <br>
         <a href="/examples/">Listen yourself to some of our previous work from happy customers!</a>
       </p>
@@ -52,7 +53,10 @@
     <div class="row">
       <p style="font-size: 14px;">
         <br>
-        Of course, creating the perfect track doesn't start at the mastering level. We know our customers want to learn how to mix and record like the pros, and that is why we offer mix feedback. Regardless of your skill level as a producer, <b>there is nothing more vital to growth than receiving feedback on your work from experienced ears</b>. We include mix feedback with your first free master to give you an idea of what you can expect. <!-- <a href="#memberships">Join Get Mastered as a member today to start receiving mix feedback throughout your recording process.</a> -->
+        Of course, creating the perfect track doesn't start at the mastering level. We know our customers want to learn how to mix and record like the pros, and that is why we offer mix feedback. Regardless of your skill level as a producer, <b>there is nothing more vital to growth than receiving feedback on your work from experienced ears</b>. We tailor our feedback to your skill level, and offer recommended recording and mixing solutions with every mix feedback. 
+        <br>
+        <br>
+        We include personalized mix feedback with your first free master to give you an idea of what you can expect. <!-- <a href="#memberships">Join Get Mastered as a member today to start receiving mix feedback throughout your recording process.</a> -->
 
       </p>
     </div>
