--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -19,7 +19,7 @@
     Do you want your mastering engineer with you every step of the way? Mix Feedback, available on any level membership plan, gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
     <br>
     <br>
-    Mix Feedback goes a little something like this: you send us a mix, and we send you exactly what we would do to fix any issues you might be unhappy with. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
+    Mix Feedback goes a little something like this: you send us a mix, and we recommend solutions to any issues you might be unhappy with. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
     <br>
     <br>
      In addition to your monthly Mix Feedbacks, we give our members complimentary Mix Feedback for anything you have your engineer master. Examples of mix feedback are coming to our website soon.
@@ -69,10 +69,10 @@
     Do you want your mastering engineer with you every step of the way? Mix Feedback, available on any level membership plan, gives you access to your mastering engineer when you want help with a mix that isn't quite sounding as great as you'd like.
     <br>
     <br>
-    Mix Feedback goes a little something like this: you send us a mix, and we send you exactly what we would do to fix any issues you might be unhappy with. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
+    Mix Feedback goes a little something like this: you send us a mix, and we recommend solutions to any issues we hear. For example, if your vocal compression seems a little off, we can suggest control values on a specific compressor plug-in you might be using. Your mastering engineer will also tailor this advice to your skill level, so don't worry about feeling patronized (or jargon-ized).
     <br>
     <br>
-     In addition to your monthly Mix Feedbacks, we give our members complimentary Mix Feedback for anything you have your engineer master. Examples of mix feedback are coming to our website soon.
+    Our members get Mix Feedback free with every master, so that we can identify and fix any mix-level issues before we master your track. Each tier also includes a certain amount of Mix Feedbacks monthly, which you can use for help during your recording and mixing process when things aren't sounding quite right.
   </div>
 
 
