--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -1,7 +1,6 @@
 
 
-<div id="reviews" class="col-lg-12 bg-gray" style="padding: 5% 15%; margin: 0px; background: url(/img/backgrounds/speaker-w.png) no-repeat center center;   background-size: cover; 
-  background-attachment: fixed;">
+<div id="reviews" class="col-lg-12 bg-gray" style="padding: 5% 15%; margin: 0px;">
 <div class="row-fluid">
 
 
