--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -8,17 +8,17 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="Keenan Hye">
 
-    <link rel="shortcut icon" href="http://i1045.photobucket.com/albums/b459/keenanhi/Flavicon_zps31q8d1uz.png" />
+    <!-- <link rel="shortcut icon" href="http://i1045.photobucket.com/albums/b459/keenanhi/Flavicon_zps31q8d1uz.png" /> -->
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Fonts -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <link href="/css/animate.css" rel="stylesheet" />
-    <!-- Squad theme CSS -->
+    <!-- <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
+      <!-- <link href="/css/animate.css" rel="stylesheet" /> -->
+    <!-- CSS -->
     <link href="/css/style.css" rel="stylesheet">
-      <link href="/color/default.css" rel="stylesheet">   
+      <!-- <link href="/color/default.css" rel="stylesheet"> -->   
 
   </head>
 
