--- a/_includes/rates-services.html
+++ b/_includes/rates-services.html
@@ -1,7 +1,7 @@
 
 
 
-<div id="memberships" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/backgrounds/mac-w.png) no-repeat center center;   background-size: cover; 
+<div id="memberships" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/backgrounds/mac-w-lq.jpg) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 <div class="row" >
 
