--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -1,6 +1,6 @@
 
 
-<div id="rates" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/backgrounds/phones-b.png) no-repeat center center;   background-size: cover; 
+<div id="rates" class="page-scroll col-lg-12" style="padding: 5% 5%; margin: 0px; background: url(/img/backgrounds/phones-b-lq.jpg) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 <div class="row" >
 
