--- a/_includes/footer-post.html
+++ b/_includes/footer-post.html
@@ -1,13 +1,42 @@
 
+    
+
+
+    </div>
+
+    <div class="col-lg-12 bg-white">
+      <div class="row-fluid" style="text-align: center; padding: 3% 5%;">
+
+        <h3 style="color: #777; display: inline; font-size: 16px;">
+    Get Social
+</h3>
+
+<br>
+<br>
+<a target="_blank" href="http://www.facebook.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-FB-trans.png" width="25px" height="25px"> </a>
+
+<a target="_blank" href="http://www.instagram.com/getmastereddeals" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-Insta-trans.png" width="22px" height="22px"> </a>
+
+<a target="_blank" href="http://www.soundcloud.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-SC-trans.png" width="45px" height="22px"> </a>
+
+<a target="_blank" href="http://www.twitter.com/getmastered" style="padding: 0% 1.5%;"> <img class="social" src="/img/social-media/Button-Twit-trans.png" width="25px" height="25px"> </a>
+
+<br>
+<br>
+<p style="font-size: 14px; color: #aaa;"><b><a href="/contact/">contact</a> - <a href="/#faq">FAQ</a> - <a href="/blog/">blog</a></b></p>
+
+
+      </div>
+
 
     </div>
 
     <!-- Core JavaScript Files -->
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery.easing.min.js"></script>	
-	<script src="/js/jquery.scrollTo.js"></script>
-	<script src="/js/wow.min.js"></script>
+    <script src="/js/jquery.easing.min.js"></script>    
+    <script src="/js/jquery.scrollTo.js"></script>
+    <script src="/js/wow.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="/js/custom.js"></script>
 
@@ -22,5 +51,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MSTFPS');</script>
 <!-- End Google Tag Manager -->
+
+<!-- Facebook bull -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 
 </html>
