--- a/_includes/rates.html
+++ b/_includes/rates.html
@@ -12,7 +12,7 @@
  	<!-- <img src="/img/icons/master-icon.png"> -->
 
  	<p style="font-size: 16px; color: #eee;"><br>
- 		In addition to your <a href="#free">first master free</a>, <b>we give our clients another free master credit with every three paid masters</b>, just for sticking with us. Plus, our affordable rates get you the absolute best value for your dollar.
+ 		In addition to your <a href="#free">first master free</a>, <b>we give our clients another free master credit with every three paid masters</b>, just for sticking with us. Plus, our rates are the best value for your dollar that you will find anywhere.
  		<br>
  		<br>
  		With Get Mastered, you don't just get a master; you get a personal mastering engineer who will work with you to make your music the best it can be. In addition to making your tracks louder, your albums cohesive, and your songs ready for commercial release, our engineers take pride in artistically enhancing your track in a way that reflects your style. Your engineer at Get Mastered will get to know your tastes, and get you closer to the sounds and artists you admire.
